--- a/package.json
+++ b/package.json
@@ -15,10 +15,13 @@
     "@types/node": "^16.18.29",
     "@types/react": "^18.2.6",
     "@types/react-dom": "^18.2.4",
+    "eslint-plugin-prettier": "^4.2.1",
+    "netlify-cli": "^15.1.0",
     "prisma": "^4.14.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.11.1",
+    "react-router-dom": "^6.11.1",
     "react-scripts": "5.0.1",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
@@ -49,6 +52,8 @@
   },
   "devDependencies": {
     "@prisma/client": "^4.14.0",
-    "eslint": "^8.40.0"
+    "eslint": "^8.40.0",
+    "eslint-config-prettier": "^8.8.0",
+    "prettier": "^2.8.8"
   }
 }
