--- a/package.json
+++ b/package.json
@@ -7,15 +7,6 @@
     "@emotion/styled": "^11.11.0",
     "@mui/icons-material": "^5.11.16",
     "@mui/material": "^5.13.0",
-    "@netlify/functions": "^1.6.0",
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.29",
-    "@types/react": "^18.2.6",
-    "@types/react-dom": "^18.2.4",
-    "eslint-plugin-prettier": "^4.2.1",
     "netlify-cli": "^15.1.0",
     "prisma": "^4.14.0",
     "react": "^18.2.0",
@@ -54,6 +45,15 @@
     "@prisma/client": "^4.14.0",
     "eslint": "^8.40.0",
     "eslint-config-prettier": "^8.8.0",
-    "prettier": "^2.8.8"
+    "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.8",
+    "@netlify/functions": "^1.6.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^13.4.0",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.5.2",
+    "@types/node": "^16.18.29",
+    "@types/react": "^18.2.6",
+    "@types/react-dom": "^18.2.4"
   }
 }
